--- a/web/package.json
+++ b/web/package.json
@@ -11,11 +11,15 @@
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.7.0",
     "axios": "^0.26.1",
+    "cors": "^2.8.5",
+    "morgan": "^1.10.0",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/morgan": "^1.9.3",
     "@types/node": "17.0.21",
     "@types/react": "17.0.40",
     "autoprefixer": "^10.4.2",
