--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.7.0",
+    "@prisma/client": "^3.11.0",
     "axios": "^0.26.1",
     "cors": "^2.8.5",
     "morgan": "^1.10.0",
@@ -20,12 +21,13 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/morgan": "^1.9.3",
-    "@types/node": "17.0.21",
+    "@types/node": "^17.0.23",
     "@types/react": "17.0.40",
     "autoprefixer": "^10.4.2",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
     "postcss": "^8.4.8",
+    "prisma": "^3.11.0",
     "tailwindcss": "^3.0.23",
     "typescript": "4.6.2"
   }
