--- a/web/package.json
+++ b/web/package.json
@@ -16,7 +16,8 @@
     "morgan": "^1.10.0",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-use": "^17.4.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
